2008-01-24 TADA Tadashi <sho@spc.gr.jp>
	* */hide-mail-field.rb: added notice to rewite TSUKKOMI information.

2008-01-23 TADA Tadashi <sho@spc.gr.jp>
	* */makerss.rb: change some labels on edit page.

2008-01-19 zunda <zunda at freeshell.org>
	* weather.rb, */weather.rb: modified so that weather can be shown at right
	of title
	* weather.rb: modified to include default CSS

2008-01-16 zunda <zunda at freeshell.org>
	* */weather.rb: fixed escape of URL of NOAA

2008-01-16 zunda <zunda at freeshell.org>
	* weather.rb, */weather.rb: moved definition of surrounding tags to
	html_string methods

2008-01-15 zunda <zunda at freeshell.org>
	* */weather.rb: added included weather/condition and temperature into span

2008-01-14 SHIBATA Hiroshi <h-sbt@nifty.com>
	* weather.rb: Hide output string in RSS feed.

2008-01-06 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: delete over escape of <title> in each items. thanks for Ogawa
	KenIchi.

2008-01-05 akira yamada <akira at arika.org>
	* highlight.rb: escape backslash in diary title and delete white space from tail
	of subtitle.

2008-01-03 OGAWA KenIchi <kenichi at ice.email.ne.jp>
	* category.rb: delete over escapes from categories.
	* */category.rb: delete character entity reference from navigation default.

2007-12-16 TADA Tadashi <sho@spc.gr.jp>
	* release 2.2.0.

2007-12-10 zunda <zunda at freeshell.org>
	* disp_referrer.rb: modified to allow to write keys for seach word (String)
	and recursive URL (Symbol) in an Array
	* ja/disp_referrer.rb: added translation URLs from Google

2007-12-10 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added search engines from chew, wordtantei,
	sfa-cms, hatena, Live Search. Modified search engines from Yahoo and
	Infoseek. Thank you, knu

2007-12-10 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added require 'uri' to test code

2007-12-07 zunda <zunda at freeshell.org>
	* disp_referrer.rb: modified to recursively convert URL in query
	with keyword specified with a Symbol