@@ -1,3 +1,6 @@
+2008-02-25 TADA Tadashi <sho@spc.gr.jp>
+	* makerss.rb: replaced character entities to numeric. 
+
 2008-01-24 TADA Tadashi <sho@spc.gr.jp>
 	* */hide-mail-field.rb: added notice to rewite TSUKKOMI information.
 
